--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,84 +1,90 @@
 pipeline {
-    agent any
+agent any
 
-    tools {
-        nodejs 'NodeJS'
-    }
+tools {
+nodejs 'NodeJS'
+}
 
-    parameters {
-        string(name: 'BRANCH_NAME', defaultValue: 'main', description: 'Branch to build from')
-        string(name: 'STUDENT_NAME', defaultValue: 'your name', description: 'Provide your name here (no name, no marks)')
-        choice(name: 'ENVIRONMENT', choices: ['dev', 'qa', 'prod'], description: 'Select environment')
-        booleanParam(name: 'RUN_TESTS', defaultValue: true, description: 'Run Jest tests after build')
-    }
+parameters {
+string(name: 'BRANCH_NAME', defaultValue: 'main', description: 'Branch to build from')
+string(name: 'STUDENT_NAME', defaultValue: 'Sibghat Ullah') //provide your name here, no name, no marks
+choice(name: 'ENVIRONMENT', choices: ['dev', 'qa', 'prod'], description: 'Select
+environment')
+booleanParam(name: 'RUN_TESTS', defaultValue: true, description: 'Run Jest tests after
+build')
+}
 
-    environment {
-        APP_VERSION = "1.0.${BUILD_NUMBER}"
-        MAINTAINER = "Student"
-    }
+environment {
+APP_VERSION = "1.0.${BUILD_NUMBER}"
+MAINTAINER = "Student"
+}
 
-    stages {
-        stage('Checkout') {
-            steps {
-                echo "Checking out branch: ${params.BRANCH_NAME}"
-                checkout scm
-            }
-        }
+stages {
+stage('Checkout') {
+steps {
 
-        stage('Install Dependencies') {
-            steps {
-                echo "Installing required packages..."
-                bat 'npm install'
-            }
-        }
+echo "Checking out branch: ${params.BRANCH_NAME}"
+checkout scm
+}
+}
 
-        stage('Build') {
-            steps {
-                echo "Building version ${APP_VERSION} for ${params.ENVIRONMENT} environment"
-                bat '''
-                    echo Simulating build process...
-                    if not exist build mkdir build
-                    copy *.js build
-                    echo Build completed successfully!
-                    echo App version: %APP_VERSION% > build\\version.txt
-                '''
-            }
-        }
+stage('Install Dependencies') {
+steps {
+echo "Installing required packages..."
+sh 'npm install'
+}
+}
 
-        stage('Test') {
-            when {
-                expression { return params.RUN_TESTS }
-            }
-            steps {
-                echo "Running Jest tests..."
-                bat 'npm test'
-            }
-        }
+stage('Build') {
+steps {
+echo " Building version ${APP_VERSION} for ${params.ENVIRONMENT} environment"
+sh '''
+echo "Simulating build process..."
+mkdir -p build
+cp *.js build/
+echo "Build completed successfully!"
+echo "App version: ${APP_VERSION}" &gt; build/version.txt
+'''
+}
+}
 
-        stage('Package') {
-            steps {
-                echo "Creating zip archive for version ${APP_VERSION}"
-                bat 'powershell Compress-Archive -Path build\\* -DestinationPath build_%APP_VERSION%.zip'
-            }
-        }
+stage('Test') {
 
-        stage('Deploy (Simulation)') {
-            steps {
-                echo "Simulating deployment of version ${APP_VERSION} to ${params.ENVIRONMENT}"
-            }
-        }
-    }
+when {
+expression { return params.RUN_TESTS }
+}
+steps {
+echo "Running Jest tests..."
+sh 'npm test'
+}
+}
 
-    post {
-        always {
-            echo "Cleaning up workspace..."
-            deleteDir()
-        }
-        success {
-            echo "Pipeline succeeded! Version ${APP_VERSION} built and tested."
-        }
-        failure {
-            echo "Pipeline failed! Check console output for details."
-        }
-    }
+stage('Package') {
+steps {
+echo "Creating zip archive for version ${APP_VERSION}"
+sh 'zip -r build_${APP_VERSION}.zip build'
+}
+}
+
+stage('Deploy (Simulation)') {
+steps {
+echo "Simulating deployment of version ${APP_VERSION} to
+${params.ENVIRONMENT}"
+}
+}
+}
+
+post {
+always {
+
+echo "Cleaning up workspace..."
+deleteDir()
+}
+success {
+echo " Pipeline succeeded! Version ${APP_VERSION} built and tested."
+}
+failure {
+echo " Pipeline failed! Check console output for details."
+}
+}
 }
