--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,10 +8,8 @@ nodejs 'NodeJS'
 parameters {
 string(name: 'BRANCH_NAME', defaultValue: 'main', description: 'Branch to build from')
 string(name: 'STUDENT_NAME', defaultValue: 'Sibghat Ullah') //provide your name here, no name, no marks
-choice(name: 'ENVIRONMENT', choices: ['dev', 'qa', 'prod'], description: 'Select
-environment')
-booleanParam(name: 'RUN_TESTS', defaultValue: true, description: 'Run Jest tests after
-build')
+choice(name: 'ENVIRONMENT', choices: ['dev', 'qa', 'prod'], description: 'Select environment')
+booleanParam(name: 'RUN_TESTS', defaultValue: true, description: 'Run Jest tests after build')
 }
 
 environment {
