--- a/JenkinsFile
+++ b/JenkinsFile
@@ -66,8 +66,7 @@ sh 'zip -r build_${APP_VERSION}.zip build'
 
 stage('Deploy (Simulation)') {
 steps {
-echo "Simulating deployment of version ${APP_VERSION} to
-${params.ENVIRONMENT}"
+echo "Simulating deployment of version ${APP_VERSION} to ${params.ENVIRONMENT}"
 }
 }
 }
